# fair-clustering-at-scale

./: .gitignore  CITATION.cff  LICENSE  README.md  main.py  pyproject.toml
configs/: adult.py  bank_40k.py  bank_5k.py  census1990.py  creditcard.py  diabetes.py  synthetic_a.py  synthetic_b.py
data/: synthetic_a.csv  synthetic_b.csv
fair_clustering/: base.py  blp.py  exact.py  experiments.py  flow.py  plotting.py  preprocessing.py
